--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,27 +9,29 @@ html(lang="ru")
 			div.container
 				div.row.justify-content-center
 					div.col-12.col-lg-6
+						div.intro-page__top
+							+logo({img: 'logo.svg', alt: 'Crypto', title: 'Crypto'})
 						ul.intro-page__list
 							li.intro-page__item
-								a(href="home.html" target="_blank") Home
+								a(href="home" target="_blank") Home
 							li.intro-page__item
-								a(href="chat.html" target="_blank") Chat
+								a(href="chat" target="_blank") Chat
 							li.intro-page__item
-								a(href="wallet.html" target="_blank") Wallet
+								a(href="wallet" target="_blank") Wallet
 							li.intro-page__item
-								a(href="order-book.html" target="_blank") Order Book
+								a(href="order-book" target="_blank") Order Book
 							li.intro-page__item
-								a(href="transactions.html" target="_blank") Transactions
+								a(href="transactions" target="_blank") Transactions
 							li.intro-page__item
-								a(href="settings.html" target="_blank") Settings
+								a(href="settings" target="_blank") Settings
 							li.intro-page__item
-								a(href="register.html" target="_blank") Register
+								a(href="register" target="_blank") Register
 							li.intro-page__item
-								a(href="sign-in.html" target="_blank") Sign-In
+								a(href="sign-in" target="_blank") Sign-In
 							li.intro-page__item
-								a(href="referral.html" target="_blank") Referral
+								a(href="referral" target="_blank") Referral
 
 							li.intro-page__item
-								a(href="style-guide.html" target="_blank") style-guide
+								a(href="style-guide" target="_blank") style-guide
 
 		include include/script.pug
